Fix IE8 carousel control alignment

--- a/src/SimplyTestable/WebsiteBundle/Resources/assets/css/homepage.css
+++ b/src/SimplyTestable/WebsiteBundle/Resources/assets/css/homepage.css
@@ -22,13 +22,23 @@
     margin-top: 40px;
 }
 
-.carousel-control.left {
+.carousel-control.left,
+.carousel-control.right {
     background-image: none;
+    filter: none;
 }
 
 .carousel-control.right {
-    background-image: none;
     padding-right: 20px;
+    right:0;
+}
+
+body.IE8 .carousel-control.left {
+    left: 30px;
+}
+
+body.IE8 .carousel-control.right {
+    right: -20px;
 }
 
 .carousel-control .fa {
